fix loader not showing

--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -17,7 +17,9 @@
 
     .canvasOverlay {
         position: absolute;
-        background-color: rgba(0, 0, 0, .5);
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.3);
         width: 100%;
         height: 100%;
 
